# functional-forecast-22300

./: CHANGELOG.md  README.md  functional-forecast22300.cabal  report.txt
app/: ApiRequests.hs  Main.hs  Plotting.hs  PolynomialRegression.hs  ProcessCSVData.hs  StockRegression.hs  TimeSeriesRegression.hs
