cabal-version:      2.4
name:               functional-forecast22300
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

executable functional-forecast22300
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: ProcessCSVData, StockRegression, ApiRequests, Plotting, TimeSeriesRegression

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>= 4.16.4.0, 
        yahoo-finance-api >= 0.2.0.3, 
        cassava >= 0.5.3.0, 
        bytestring, 
        vector,
        hmatrix >= 0.20.2,
        yahoo-prices,
        debug,
        optparse-applicative,
        time
    hs-source-dirs:   app
    default-language: Haskell2010